--- a/bin/TrabalhoFinal/.gitignore
+++ b/bin/TrabalhoFinal/.gitignore
@@ -8,3 +8,7 @@
 /SortAndSearch.class
 /Node.class
 /Book.class
+/ListADT.class
+/ElementNotFoundException.class
+/EmptyCollectionException.class
+/Menu.class
